# UIR_2023

./: README.md  analitecheskayaChast.md  analytical_part.md  pyproject.toml
annotation/: db.sqlite3
annotation/annotation/: asgi.py  settings.py  urls.py  wsgi.py
annotation/main/: urls.py  views.py
annotation/main/static/main/css/: main.css
annotation/main/templates/main/: about.html  index.html  layout.html
annotation/news/: admin.py  urls.py  views.py
annotation/news/migrations/: 0001_initial.py
annotation/news/templates/news/: news_home.html
